[gd_scene load_steps=15 format=3 uid="uid://dffp3lvdyl63c"]

[ext_resource type="Script" uid="uid://bav7q87ivvgms" path="res://scripts/ui.gd" id="1_fyqef"]
[ext_resource type="PackedScene" uid="uid://c8cv3rllm0im6" path="res://scripts/resources/classes/character_ui_slot.tscn" id="2_m6e0p"]
[ext_resource type="PackedScene" uid="uid://dnf33663bha00" path="res://town_menu.tscn" id="2_waa4j"]
[ext_resource type="Resource" uid="uid://cqi7vndfvlt5p" path="res://scripts/resources/character/character1.tres" id="3_n5ude"]
[ext_resource type="StyleBox" uid="uid://sfo7ou64hfqg" path="res://assets/button/button_flat_chracter.tres" id="3_ok7cu"]
[ext_resource type="Resource" uid="uid://by4bqg48npfkl" path="res://scripts/resources/character/character2.tres" id="4_y4yjw"]
[ext_resource type="Resource" uid="uid://dqqrcafu0d8hl" path="res://scripts/resources/character/character3.tres" id="5_waa4j"]
[ext_resource type="Resource" uid="uid://cdj01p03lwuuc" path="res://scripts/resources/character/character4.tres" id="6_ok7cu"]
[ext_resource type="PackedScene" uid="uid://cmv3gr87js7is" path="res://character_menu.tscn" id="10_irxef"]
[ext_resource type="Texture2D" uid="uid://b2rk4r1qruff5" path="res://assets/carriage.png" id="11_e2l4f"]
[ext_resource type="Script" uid="uid://djb2vvbwca6sm" path="res://scripts/trail_movement.gd" id="12_gs482"]
[ext_resource type="PackedScene" uid="uid://3pkhc8ws2xfg" path="res://town_point.tscn" id="12_n5rqp"]
[ext_resource type="PackedScene" uid="uid://bcwyvl6xmkt4x" path="res://trade_menu.tscn" id="14_cxd00"]
[ext_resource type="PackedScene" uid="uid://cauq13tuo6oxl" path="res://wagon_context_menu.tscn" id="14_etlur"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -768.0
offset_bottom = -520.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fyqef")

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 304.0
color = Color(0.873298, 0.873298, 0.873298, 1)
metadata/_edit_lock_ = true

[node name="TravelMenu" type="ColorRect" parent="."]
layout_mode = 0
offset_top = 328.0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="equip" type="Button" parent="TravelMenu"]
layout_mode = 0
offset_left = 851.0
offset_top = 248.0
offset_right = 947.0
offset_bottom = 296.0
theme_override_styles/normal = ExtResource("3_ok7cu")
text = "EQUIP
"

[node name="ColorRect3" type="ColorRect" parent="TravelMenu"]
layout_mode = 0
offset_top = -24.0
offset_right = 1152.0
metadata/_edit_lock_ = true

[node name="CharacterUISlot" parent="TravelMenu" instance=ExtResource("2_m6e0p")]
process_priority = -1
layout_mode = 0
offset_left = 696.0
offset_top = 31.0
offset_right = 880.0
offset_bottom = 95.0
character = ExtResource("3_n5ude")

[node name="CharacterUISlot2" parent="TravelMenu" instance=ExtResource("2_m6e0p")]
process_priority = -1
layout_mode = 0
offset_left = 928.0
offset_top = 32.0
offset_right = 1112.0
offset_bottom = 96.0
character = ExtResource("4_y4yjw")

[node name="CharacterUISlot3" parent="TravelMenu" instance=ExtResource("2_m6e0p")]
process_priority = -1
layout_mode = 0
offset_left = 696.0
offset_top = 152.0
offset_right = 880.0
offset_bottom = 216.0
character = ExtResource("5_waa4j")

[node name="CharacterUISlot4" parent="TravelMenu" instance=ExtResource("2_m6e0p")]
process_priority = -1
layout_mode = 0
offset_left = 928.0
offset_top = 152.0
offset_right = 1112.0
offset_bottom = 216.0
character = ExtResource("6_ok7cu")

[node name="landmarkmiles" type="Label" parent="TravelMenu"]
layout_mode = 0
offset_left = 96.0
offset_top = 112.0
offset_right = 320.0
offset_bottom = 128.0
text = "Next Landmark:"
horizontal_alignment = 2

[node name="milestotal" type="Label" parent="TravelMenu"]
layout_mode = 0
offset_left = 80.0
offset_top = 144.0
offset_right = 320.0
offset_bottom = 160.0
text = "Miles Traveled:"

[node name="Speed" type="Label" parent="TravelMenu"]
layout_mode = 0
offset_left = 224.0
offset_top = 80.0
offset_right = 320.0
offset_bottom = 96.0
text = "Speed:"
horizontal_alignment = 2

[node name="weather" type="Label" parent="TravelMenu"]
layout_mode = 0
offset_left = 192.0
offset_top = 48.0
offset_right = 320.0
offset_bottom = 64.0
text = "Weather:"
horizontal_alignment = 2

[node name="time" type="Label" parent="TravelMenu"]
layout_mode = 0
offset_left = 32.0
offset_top = -16.0
offset_right = 112.0
offset_bottom = 8.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Time:"
horizontal_alignment = 2

[node name="context" type="Label" parent="TravelMenu"]
layout_mode = 0
offset_left = 432.0
offset_top = -17.0
offset_right = 880.0
offset_bottom = 7.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Press Enter for Context Menu"
horizontal_alignment = 2

[node name="food" type="Label" parent="TravelMenu"]
layout_mode = 0
offset_left = 240.0
offset_top = 175.0
offset_right = 320.0
offset_bottom = 191.0
text = "Food:"
horizontal_alignment = 2

[node name="TownMenu" parent="." instance=ExtResource("2_waa4j")]
visible = false
layout_mode = 0

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_top = 288.0
offset_right = 1152.0
offset_bottom = 304.0
color = Color(4.90934e-06, 0.628764, 0.0737038, 1)

[node name="Carriage" type="Sprite2D" parent="ColorRect"]
position = Vector2(912, -79)
scale = Vector2(4.39375, 5.71329)
texture = ExtResource("11_e2l4f")

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("12_gs482")

[node name="town_point" parent="Control" groups=["landmarks"] instance=ExtResource("12_n5rqp")]
layout_mode = 1
offset_left = -188.0
offset_top = 192.0
offset_right = -188.0
offset_bottom = 192.0
scale = Vector2(1.38278, 1.48203)

[node name="trade_menu" parent="." instance=ExtResource("14_cxd00")]
visible = false
layout_mode = 0

[node name="CharacterMenu" parent="." instance=ExtResource("10_irxef")]
visible = false
layout_mode = 1

[node name="WagonContextMenu" parent="." instance=ExtResource("14_etlur")]
visible = false
layout_mode = 0

[connection signal="pressed" from="TravelMenu/equip" to="." method="_on_equip_pressed"]
